@@ -4,6 +4,7 @@
   * Add gemspec
   * Add support for data mapper
   * Attribute methods are now defined before calling attr_encrypted when using active record
+  * Add ability to specify your own encoding directives
 
 2009-01-07 - Sean Huber (shuber@huberry.com)
   * Initial commit
